# InferSpect

./: .cursorrules  .gitignore  IMPLEMENTATION_PLAN.md  PROVIDER_SETUP_STATUS.md  README.md  TESTING_JULES_WORKFLOW.md  create_test_issue.sh  output.txt  pyproject.toml  sample_code.py  test_jules_workflow.sh
.claude/: README.md  instructions.md  settings.json
.claude/commands/: check.md  deploy.md  docs.md  observability.md  plan.md  review.md  security.md  test.md
.github/scripts/: jules_planner.py
.github/workflows/: README.md  claude_review.yml  cursor_verify.yml  gemini_plan.yml  jules_plan.yml
docs/: ARCHITECTURE.md  PROVIDER_SETUP_STATUS.md  sample_feature.md
scripts/: test_jules_workflow.sh
src/inferspect/: __init__.py
