[tool.poetry]
name = "sample-pr-project"
version = "0.1.0"
description = "A sample project to test workflows"
authors = ["Jules <jules@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
